--- a/wp-content/themes/apacheblack/style.css
+++ b/wp-content/themes/apacheblack/style.css
@@ -27,6 +27,17 @@ header {
 	height: 945px;
 }
 
+.featured .column{
+	display: inline-block;
+	float: left;
+}
+
+.image {
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	height: 945px;
+}
 
 /* Typography
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -62,8 +73,27 @@ h3 {
 	margin: 30px 0;
 }
 
+h4 {
+	font-size: 2em;
+	text-align: center;
+	text-shadow: 0px 2px 4px #000000;
+	margin-top: 650px;
+}
+
+h4 a {
+	text-decoration: none;
+	color: #FFFFFF;
+	font-size: 2em;
+}
+
+h5 {
+	font-size: 2em;
+	text-align: center;
+}
+
 p {
 	font-family: 'Open Sans', sans-serif;
+	font-size: 1.1em;
 }
 
 header p {
@@ -83,5 +113,5 @@ ul {
 }
 
 li {
-	
+	display: inline-block;
 }
