--- a/wp-content/themes/apacheblack/style.css
+++ b/wp-content/themes/apacheblack/style.css
@@ -5,12 +5,11 @@
 	Version: 1.0.0
 	Author: Kayra Alat (@kayraalat)
 	Author URI: http://kayra.co.uk	
-	Tags: Blank, HTML5, CSS3
+	Tags: HTML5, CSS3
 
 	License: MIT
 	License URI: http://opensource.org/licenses/mit-license.php
 
-	341.33333333
 */
 
 
@@ -21,7 +20,7 @@ body {
 	background-color: #43434B;
 }
 
-header {
+header.front-page {
 	background: url(/wp-content/themes/apacheblack/images/header.png) no-repeat center center; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -75,6 +74,10 @@ h1 {
 	margin-top: 200px;
 	text-transform: uppercase;
 	margin-bottom: 10px;
+}
+
+.post .title h1 {
+	font-size: 5.1em;
 }
 
 h2 {
@@ -192,6 +195,10 @@ header p {
 	margin-bottom: 30px;
 }
 
+.quote {
+	font-family: 'Cardo', serif;
+}
+
 /* Lists
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
@@ -205,4 +212,263 @@ header p {
 .footer li {
 	display: inline-block;
 	margin: 0 10px;
+}
+
+
+/* Icons
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+@font-face {
+	font-weight: normal;
+	font-style: normal;
+	font-family: 'icomoon';
+	src:url('fonts/icomoon.eot?-ee0u0f');
+	src:url('fonts/icomoon.eot?#iefix-ee0u0f') format('embedded-opentype'),
+		url('fonts/icomoon.woff?-ee0u0f') format('woff'),
+		url('fonts/icomoon.ttf?-ee0u0f') format('truetype'),
+		url('fonts/icomoon.svg?-ee0u0f#icomoon') format('svg');
+}
+
+@font-face {
+  font-family: "minicons-webalys";
+  src:url("fonts/minicons-webalys.eot");
+  src:url("fonts/minicons-webalys.eot?#iefix") format("embedded-opentype"),
+    url("fonts/minicons-webalys.ttf") format("truetype"),
+    url("fonts/minicons-webalys.svg#minicons-webalys") format("svg"),
+    url("fonts/minicons-webalys.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* Header
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.header {
+	position: relative;
+	margin: 0 auto;
+	min-height: 560px;
+	width: 100%;
+	height: 100%;
+}
+
+.bg-img {
+	position: absolute;
+	overflow: hidden;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+}
+
+.bg-img img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: block;
+	min-width: 100%;
+	min-height: 100%;
+}
+
+.title {
+	z-index: 1000;
+	margin: 0 auto;
+	padding: 0 1.25em;
+	width: 100%;
+	text-align: center;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translateX(-50%) translateY(-50%);
+	transform: translateX(-50%) translateY(-50%);
+}
+
+.title h1 {
+	padding: 0 0 0.2em;
+	color: #fff;
+	font-weight: 300;
+	text-shadow: 0px 0px 4px rgba(0,0,0,0.5);
+	font-size: 3.25em;
+	margin: 0 auto;
+}
+
+.title p {
+	color: #fff;
+	padding: 0 0 0.6em;
+	font-weight: 300;
+	font-size: 0.85em;
+	margin: 0 auto;
+}
+
+.title h1,
+.title p.subline {
+	line-height: 1;
+}
+
+.title p.subline {
+	font-size: 1.75em;
+}
+
+/* Trigger Button */
+button.trigger {
+	position: fixed;
+	bottom: 40px;
+	left: 50%;
+	z-index: 5000;
+	display: block;
+	margin-left: -0.5em;
+	padding: 0;
+	width: 1em;
+	height: 1em;
+	border: none;
+	background: transparent;
+	color: transparent;
+	font-size: 2em;
+	cursor: pointer;
+}
+
+.container-fluid:not(.notrans) button.trigger {
+	-webkit-transition: opacity 0.3s 0.5s;
+	transition: opacity 0.3s 0.5s;
+}
+
+.container-fluid.modify:not(.notrans) button.trigger {
+	opacity: 0;
+	pointer-events: none;
+	-webkit-transition-delay: 0s;
+	transition-delay: 0s;
+}
+
+button.trigger::before {
+	position: absolute;
+	bottom: 100%;
+	left: -100%;
+	padding: 0.8em;
+	width: 300%;
+	color: #fff;
+	content: attr(data-info);
+	font-size: 0.35em;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+}
+
+button.trigger:focus {
+	outline: none;
+}
+
+button.trigger span {
+	position: relative;
+	display: block;
+	overflow: hidden;
+	width: 100%;
+	height: 100%;
+}
+
+button.trigger span::before {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	color: #fff;
+	content: "\e097";
+	text-transform: none;
+	font-weight: normal;
+	font-style: normal;
+	font-variant: normal;
+	font-family: 'icomoon';
+	line-height: 1;
+	speak: none;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+
+.intro-effect-push:not(.notrans) .header,
+.intro-effect-push:not(.notrans) > .title,
+.intro-effect-push:not(.notrans) .content > div {
+	-webkit-transition-property: opacity, -webkit-transform;
+	transition-property: opacity, transform;
+	-webkit-transition-duration: 1s;
+	transition-duration: 1s;
+}
+
+.intro-effect-push:not(.notrans) .header {
+	-webkit-transition-timing-function: cubic-bezier(0.7,0,0.3,1);
+	transition-timing-function: cubic-bezier(0.7,0,0.3,1);
+	-webkit-transition-duration: 1.2s;
+	transition-duration: 1.2s;
+}
+
+.intro-effect-push .codrops-demos a {
+	color: #108576;
+}
+
+.intro-effect-push .header {
+	position: absolute;
+	z-index: 1500;
+}
+
+.intro-effect-push > .title {
+	position: relative;
+	top: auto;
+	left: auto;
+	padding: 6em 1em 2em;
+}
+.content {
+	padding-top:100px;
+}
+.intro-effect-push .content {
+	padding-top:0px;
+}
+.intro-effect-push .content > div {
+	margin-top: 50px;
+	color: #fff;
+}
+
+.intro-effect-push > .title,
+.intro-effect-push .content > div {
+	-webkit-transform: translateY(400px);
+	transform: translateY(400px);
+	opacity: 0;
+}
+
+.intro-effect-push.modify > .title,
+.intro-effect-push.modify .content > div {
+	-webkit-transform: translateY(0);
+	transform: translateY(0);
+	opacity: 1;
+}
+
+.intro-effect-push.modify .header {
+	opacity: 0;
+	-webkit-transform: translateY(-100%) scale(0.9);
+	transform: translateY(-100%) scale(0.9);
+}
+
+/* Delays */
+.intro-effect-push.modify:not(.notrans) > .title {
+	-webkit-transition-delay: 0.5s;
+	transition-delay: 0.5s;
+}
+
+.intro-effect-push.modify:not(.notrans) .content > div {
+	-webkit-transition-delay: 0.6s;
+	transition-delay: 0.6s;
+}
+
+@media screen and (max-width: 27em) {
+	.intro-effect-push .header .title {
+		top: 60px;
+		-webkit-transform: translateX(-50%);
+		transform: translateX(-50%);
+	}
+
+	.title, .content {
+	}
+
+	button.trigger::before {
+		display: none;
+	}
 }
