--- a/wp-content/themes/apacheblack/style.css
+++ b/wp-content/themes/apacheblack/style.css
@@ -20,12 +20,16 @@ body {
 	background-color: #43434B;
 }
 
-.front-page {
+.index-header {
 	background: url(/wp-content/themes/apacheblack/images/header.png) no-repeat center center; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	height: 945px;
+}
+
+.archive-header h1 {
+	margin-top: 30px;
 }
 
 .image {
@@ -82,7 +86,6 @@ h1 {
 
 .post .title h1 {
 	font-size: 5.1em;
-	margin-top: 1em;
 	margin-bottom: 0.5em;
 }
 
@@ -136,6 +139,11 @@ h4 a:visited {
 	text-decoration: none;
 }
 
+.archive-list h4 {
+	margin-top: 0;
+	font-size: 1em;
+}
+
 h5 {
 	font-size: 2em;
 	text-align: center;
@@ -187,7 +195,7 @@ header p {
 	font-size: 2.3em;
 }
 
-.footer a {
+.footer ul a {
 	font-size: 1.4em;
 	text-decoration: none;
 	color: #FFFFFF;
@@ -198,7 +206,7 @@ header p {
         transition:border-bottom .5s;
 }
 
-.footer a:hover {
+.footer ul a:hover {
 	border-bottom: 3px solid #FFFFFF;
 	-webkit-transition:border-bottom .5s;
 	-moz-transition:border-bottom .5s;
@@ -209,6 +217,11 @@ header p {
 
 .footer p {
 	margin-bottom: 10px;
+}
+
+.footer p a {
+	text-decoration: none;
+	color: #FFFFFF;
 }
 
 .quote {
@@ -229,6 +242,12 @@ header p {
 .footer li {
 	display: inline-block;
 	margin: 0 10px;
+}
+
+.archive-list {
+	list-style: none;
+	padding-left: 0;
+	padding-bottom: 10px;
 }
 
 
