--- a/wp-content/themes/apacheblack/style.css
+++ b/wp-content/themes/apacheblack/style.css
@@ -32,11 +32,8 @@ body {
 	margin-top: 30px;
 }
 
-.image {
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	height: 945px;
+.latest-post-image {
+	height: auto;
 }
 
 .feature {
@@ -53,9 +50,16 @@ body {
 	margin-bottom: 50px;
 }
 
+.latest-post-image {
+	position: relative;
+}
 
 /* Images
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.latest-post-image img {
+	width: 100%;
+}
 
 .featured img {
     width: 100%;
@@ -98,11 +102,17 @@ h2 {
 }
 
 h3 {
-	letter-spacing: 3px;
-	font-size: 3.5em;
+	font-size: 2em;
 	text-align: center;
-	text-transform: uppercase;
-	margin: 30px 0;
+	text-shadow: 0px 2px 4px #000000;
+	margin: 0;
+	padding: 0;
+}
+
+.latest-post-image h3 {
+	position: absolute;
+	top: 50%;
+	left: 25%;
 }
 
 h4 {
@@ -112,7 +122,7 @@ h4 {
 	margin-top: 650px;
 }
 
-h4 a {
+h3 a, h4 a {
 	text-decoration: none;
 	color: #FFFFFF;
 	font-size: 2em;
@@ -123,7 +133,7 @@ h4 a {
         transition:border-bottom .5s;
 }
 
-h4 a:hover {
+h3 a:hover, h4 a:hover {
 	color: #FFFFFF;
 	text-decoration: none;
 	border-bottom: 3px solid #FFFFFF;
@@ -134,7 +144,7 @@ h4 a:hover {
 	    transition:border-bottom .5s;
 }
 
-h4 a:visited {
+h3 a:visited, h4 a:visited {
 	color: #FFFFFF;
 	text-decoration: none;
 }
