--- a/wp-content/themes/apacheblack/style.css
+++ b/wp-content/themes/apacheblack/style.css
@@ -58,6 +58,20 @@ body {
 	top: 70%;
 }
 
+.feature > a {
+	display: block;
+	width: 100%;
+	height: 100%;
+	position: relative;
+}
+
+.featured-post-text {
+	text-align: center;
+	width: 100%;
+	position: absolute;
+	top: 70%
+}
+
 /* Images
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
@@ -166,9 +180,7 @@ h5 {
 }
 
 .feature h5 {
-	position: absolute;
-	top: 70%;
-	left: 30%;
+	display: inline-block;
 }
 
 .feature h5 a {
