Changed background colour

--- a/wp-content/themes/apacheblack/style.css
+++ b/wp-content/themes/apacheblack/style.css
@@ -17,7 +17,7 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 body {
-	background-color: #43434B;
+	background-color: #2B303B;
 }
 
 .index-header {
