--- a/wp-content/themes/apacheblack/style.css
+++ b/wp-content/themes/apacheblack/style.css
@@ -188,7 +188,8 @@ h5 {
 
 p {
 	font-family: 'Open Sans', sans-serif;
-	font-size: 1.1em;
+	font-size: 1.2em;
+	line-height: 1.7em;
 }
 
 .content-text p {
@@ -544,6 +545,66 @@ button.trigger span::before {
 		display: none;
 	}
 }
+
+/* Tablet
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+@media (max-width: 992px) { 
+
+h1 {
+	font-size: 3em;
+}
+
+h2 {
+	font-size: 1.3em;
+}
+
+}
+
+/* Mobile
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+@media (max-width: 768px) { 
+
+h1 {
+	font-size: 2em;
+	margin-top: 50px;
+}
+
+h2 {
+	font-size: 1em;
+}
+
+h3 {
+	font-size: 1.7em;
+}
+
+h4 a {
+	font-size: 1.2em;
+}
+
+p {
+	font-size: 0.9em;
+	line-height: 1.9em;
+}
+
+header p {
+	margin-top:120px;
+}
+
+.index-header {
+	height: 400px;
+}
+
+.footer ul a {
+	font-size: 1em;
+}
+
+.footer p {
+	font-size: 0.7em;
+}
+
+}
+
+
 
 
 /* Utility
