--- a/wp-content/themes/apacheblack/style.css
+++ b/wp-content/themes/apacheblack/style.css
@@ -316,6 +316,7 @@ blockquote {
 /* Header
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
+@media (min-width: 768px) {
 .header {
 	position: absolute;
 	margin: 0 auto;
@@ -547,7 +548,7 @@ button.trigger span::before {
 		display: none;
 	}
 }
-
+}
 /* Tablet
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 @media (max-width: 992px) { 
@@ -634,6 +635,15 @@ header p {
 	font-size: 0.7em;
 }
 
+.title p {
+	text-align: center;
+	padding-bottom: 10px;
+}
+
+.title {
+	margin-bottom: 10px;
+}
+
 .content .col-md-6 {
 	padding-left: 5px;
 	padding-right: 5px;
@@ -643,44 +653,8 @@ header p {
 	width: 0;
 }
 
-.intro-effect-push .header {
-    opacity: 0;
-    -webkit-transform: translateY(-100%) scale(0.9);
-    transform: translateY(-100%) scale(0.9);
-    transition: 0s;
-
-}
-
-.container-fluid:not(.notrans) button.trigger {
-	opacity: 0;
-	pointer-events: none;
-	-webkit-transition-delay: 0s;
-	transition-delay: 0s;
-}
-
-
-intro-effect-push > .title,
-.intro-effect-push .content > div {
-	-webkit-transform: translateY(0);
-	transform: translateY(0);
-	opacity: 1;
-}
-
-.intro-effect-push .header {
-	opacity: 0;
-	-webkit-transform: translateY(-100%) scale(0.9);
-	transform: translateY(-100%) scale(0.9);
-}
-
-/* Delays */
-.intro-effect-push:not(.notrans) > .title {
-	-webkit-transition-delay: 0.5s;
-	transition-delay: 0.5s;
-}
-
-.intro-effect-push:not(.notrans) .content > div {
-	-webkit-transition-delay: 0.6s;
-	transition-delay: 0.6s;
+.header {
+	display: none;
 }
 
 }
