--- a/wp-content/themes/apacheblack/style.css
+++ b/wp-content/themes/apacheblack/style.css
@@ -549,6 +549,54 @@ button.trigger span::before {
 	}
 }
 }
+
+
+/* Comments
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.comments {
+	font-size: 1.2em;
+	border: 0;
+	padding-bottom: 1.3em;
+	color: #2B303B;
+}
+
+.comments #reply-title {
+	margin-bottom: 0.3em;
+}
+
+.comments #author {
+	float: left;
+	width: 49%;
+	padding: 0.3em;
+	margin: 0.3em;
+}
+
+.comments #email {
+	float: right;
+	width: 48%;
+	padding: 0.3em;
+	margin: 0.3em;
+}
+
+.comments #comment {
+	clear: both;
+	width: 99%;
+	padding: 0.3em;
+	margin: 0.3em;
+	margin-top: 0.3em;
+}
+
+.comments #submit {
+	margin: 0.3em;
+	padding: 0.3em;
+	margin-top: 1.5em;
+	background-color: #FFFFFF;
+	color: #2B303B;
+	border: 0;
+}
+
+
 /* Tablet
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 @media (max-width: 992px) {
