--- a/wp-content/themes/apacheblack/style.css
+++ b/wp-content/themes/apacheblack/style.css
@@ -574,7 +574,7 @@ button.trigger span::before {
 }
 
 .comments #submit {
-	margin: 0.3em;
+	margin: 0.3em 0;
 	padding: 0.3em;
 	margin-top: 1.5em;
 	background-color: #FFFFFF;
