--- a/wp-content/themes/apacheblack/style.css
+++ b/wp-content/themes/apacheblack/style.css
@@ -583,6 +583,14 @@ button.trigger span::before {
 	border-radius: 4px;
 }
 
+.comment {
+	margin: 2em 0;
+}
+
+.comment .fn {
+	font-size: 1.5em;
+}
+
 .comment-awaiting-moderation {
 	color: #FFFFFF;
 	font-size: 0.8em;
@@ -591,16 +599,35 @@ button.trigger span::before {
 .comment-author-date {
 	width: 100%;
 	display: block;
+	overflow:hidden;
+	_overflow:visible;
+	zoom:1;
 }
 
 .comment-author-date img {
-	width: 33%;
-	display: inline;
 	float: left;
+	margin-right: 0.2em;
+	display: block;
+	width: 3.5em;
+	height: auto;
 }
 
-.comment-author-date p, .comment-author-date a {
-	float: left;
+.comment-author-date .comment-meta a {
+	margin-left: 1.1em;
+	font-size: 0.8em;
+	color: #E6E6EA;
+  	text-decoration: none;
+  	transition: 0.5s;
+}
+
+.comment-author-date .comment-meta a:hover {
+    transition: 0.5s;
+    text-decoration: none;
+    color: #9E9E9E;
+}
+
+.comment-text {
+	padding-left: 4.6em;
 }
 
 /* Tablet
